Re-enable integration tests on Windows